@@ -102,7 +102,7 @@ func NewComponentManager(cfg *config.Config, db infrastructuredatabase.Database,
 
 	var utxoIndex *utxoindex.UTXOIndex
 	if cfg.UTXOIndex {
-		utxoIndex, err = utxoindex.New(domain.Consensus(), db)
+		utxoIndex, err = utxoindex.New(domain, db)
 		if err != nil {
 			return nil, err
 		}
